--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="Picture/image bengkel 1.jpg" class="d-block w-100" alt="image 1">
+          <img src="image bengkel 1.jpg" class="d-block w-100" alt="image 1">
           <div class="carousel-caption text-dark d-none d-md-block">
             <h1>▀▄▀▄ Jogja Motor ▄▀▄▀</h1>
             <p>𝗕𝗲𝗻𝗴𝗸𝗲𝗹 𝗺𝗼𝘁𝗼𝗿 𝗸𝗼𝘁𝗮 𝗯𝗲𝗻𝗴𝗸𝘂𝗹𝘂 </p>
@@ -94,7 +94,7 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-4">
           <div class="col">
             <div class="card shadow-sm">
-              <img src="Picture/image mobil 1.jpg" class="card-img-top" />
+              <img src="image mobil 1.jpg" class="card-img-top" />
               <div class="card-body">
                 <h4><a href="Produk.html"class="text-dark">Mobil Avanza</a></h4>
                 <p class="card-text">Dilengkapi dengan sistem keamanan yang memadai untuk kenyamanan berkendara</p>
@@ -106,7 +106,7 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img src="Picture/image mobil 2.jpg" class="card-img-top" />
+              <img src="image mobil 2.jpg" class="card-img-top" />
               <div class="card-body">
                 <h4><a href="Produk.html" class="text-dark">Mobil Avanza</a></h4>
                 <p class="card-text">Dilengkapi dengan sistem keamanan yang memadai untuk kenyamanan berkendara</p>
@@ -118,7 +118,7 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img src="Picture/image mobil 1.jpg" class="card-img-top" />
+              <img src="image mobil 1.jpg" class="card-img-top" />
               <div class="card-body">
                 <h4><a href="Produk.html"class="text-dark">Mobil Avanza</a></h4>
                 <p class="card-text">Dilengkapi dengan sistem keamanan yang memadai untuk kenyamanan berkendara</p>
@@ -130,7 +130,7 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img src="Picture/image mobil 4.jpg" class="card-img-top" />
+              <img src="image mobil 4.jpg" class="card-img-top" />
               <div class="card-body">
                 <h4><a href="Produk.html"class="text-dark">Mobil Avanza</a></h4>
                 <p class="card-text">Dilengkapi dengan sistem keamanan yang memadai untuk kenyamanan berkendara</p>
